--- a/app/src/main/res/layout/grain_detail_dialog.xml
+++ b/app/src/main/res/layout/grain_detail_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="16dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Название"
+                tools:text="Название"
                 android:textColor="#156ABE"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Вид (подвид)"
+                tools:text="Вид (подвид)"
                 android:textColor="#666666"
                 android:textSize="14sp"/>
 
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Полное описание..."
+                tools:text="Полное описание..."
                 android:textSize="14sp"/>
 
             <TextView
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Климатические условия: "
+                tools:text="Климатические условия: "
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Урожайность: "
+                tools:text="Урожайность: "
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Болезни и вредители: "
+                tools:text="Болезни и вредители: "
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Использование: "
+                tools:text="Использование: "
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Регионы произрастания: "
+                tools:text="Регионы произрастания: "
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -103,7 +103,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/bg_next_button"
-                android:text="В избранное"
+                tools:text="В избранное"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16sp"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/dialog_more_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_next_button"
+                android:backgroundTint="#929292"
+                android:text="@string/more_text"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="16sp"/>
